--- a/RL/TeamStats.css
+++ b/RL/TeamStats.css
@@ -1,24 +1,3 @@
-@font-face{
-  font-family: 'Zona Pro';
-  font-style: normal;
-  color: white;
-  src: url('./ZonaPro-Regular.otf');
-}
-@font-face{
-  font-family: 'Zona Pro';
-  font-style: normal;
-  font-weight: bold;
-  color: white;
-  src: url('./ZonaPro-Bold.otf');
-}
-@font-face{
-  font-family: 'Zona Pro';
-  font-style: normal;
-  font-weight: 1000;
-  color: white;
-  src: url('./ZonaPro-ExtraBold.otf');
-}
-
 @keyframes fadeInCenter{
   0% {opacity:0}
   70% {opacity:0}
@@ -27,64 +6,98 @@
 
 @keyframes fadeInRight{
   0% {opacity:0}
-  70% {opacity:0; transform: translateX(50px)}
+  30% {opacity:0; transform: translateX(50px)}
   100% {opacity:1; transform: translateX(0)}
 }
 
 @keyframes fadeInLeft{
   0% {opacity:0}
-  70% {opacity:0; transform: translateX(-50px)}
+  30% {opacity:0; transform: translateX(-50px)}
   100% {opacity:1; transform: translateX(0)}
 }
 
 @keyframes fadeInBottomLogo{
   0% {opacity:0}
-  70% {opacity:0; transform: translateY(50px)}
+  60% {opacity:0; transform: translateY(50px)}
   100% {opacity:1; transform: translateX(0)}
 }
 
 @keyframes fadeInBottomText{
   0% {opacity:0;}
-  70% {opacity:0; transform: translateY(50px) rotate(180deg)}
+  60% {opacity:0; transform: translateY(50px) rotate(180deg)}
   100% {opacity:1; transform: translateY(0px) rotate(180deg)}
 }
 
 @keyframes fadeInTop{
   0% {opacity:0}
-  70% {opacity:0; transform: translateY(-50px)}
+  60% {opacity:0; transform: translateY(-50px)}
   100% {opacity:1; transform: translateX(0)}
 }
 
 .AnimLeft{
-  animation: fadeInLeft 2s ease-in-out;
+  animation: fadeInLeft 1.3s ease-in-out;
 }
 
 .AnimRight{
-  animation: fadeInRight 2s ease-in-out;
+  animation: fadeInRight 1.3s ease-in-out;
 }
 
 .AnimTop{
-  animation: fadeInTop 2.5s ease-in-out;
+  animation: fadeInTop 2s ease-in-out;
 }
 
 .AnimBottomLogo{
-  animation: fadeInBottomLogo 2.5s ease-in-out;
+  animation: fadeInBottomLogo 2s ease-in-out;
 }
 
 .AnimBottomText{
-  animation: fadeInBottomText 2.5s ease-in-out;
+  animation: fadeInBottomText 2s ease-in-out;
 }
 
 .AnimCenter{
-  animation: fadeInCenter 2s ease-in-out;
+  animation: fadeInCenter 1.3s ease-in-out;
 }
 
 *{
   box-sizing: border-box;
-  /* outline: solid coral; */
+  font-family: 'Sora Uni';
+  /* outline: solid coral 2px; */
 }
 
-#TeamStatslPNG{
+.TeamLeftBox{
+  border-radius:10px;
+  background:rgba(0,0,0,0.6);
+  padding-top:40px;
+  padding-bottom:90px;
+  color:white;
+  font-size:32px;
+  display:grid;
+  grid-row-gap:68.5px;
+  grid-template: auto / 441px;
+  position:absolute;
+  top:202px;
+  left:322px;
+  text-align:center;
+  text-transform:uppercase;
+}
+.TeamRightBox{
+  border-radius:10px;
+  background:rgba(0,0,0,0.6);
+  padding-top:40px;
+  padding-bottom:90px;
+  color:white;
+  font-size:32px;
+  display:grid;
+  grid-row-gap:68.5px;
+  grid-template: auto / 441px;
+  position:absolute;
+  top:202px;
+  right:322px;
+  text-align:center;
+  text-transform:uppercase;
+}
+
+#iconsleft{
   position:absolute;
   left:0px;
   top:0px;
@@ -92,7 +105,7 @@
   height: 1080px;
 }
 
-#TeamStatsrPNG{
+#iconsright{
   position:absolute;
   left:0px;
   top:0px;
@@ -109,24 +122,20 @@
 }
 
 .TeamBlueStats{
-  font-family: Zona Pro;
   color: white;
   position: absolute;
   left: 530px;
   width: 100px;
   font-size: 34px;
-  /* outline: solid coral; */
   text-align: center;
 }
 
 .TeamBlueStats2{
-  font-family: Zona Pro;
   color: white;
   position: absolute;
   left: 392px;
   width: 300px;
   font-size: 34px;
-  /* outline: solid coral; */
   text-align: center;
 }
 
@@ -155,7 +164,6 @@
 }
 
 #TeamBlueTeamname{
-  font-family: Zona Pro;
   font-weight: 1000;
   color: white;
   text-transform: uppercase;
@@ -184,7 +192,6 @@
 }
 
 .TeamOrangeStats{
-  font-family: Zona Pro;
   color: white;
   position: absolute;
   right: 453px;
@@ -195,7 +202,6 @@
 }
 
 .TeamOrangeStats2{
-  font-family: Zona Pro;
   color: white;
   position: absolute;
   right: 390px;
@@ -230,7 +236,6 @@
 }
 
 #TeamOrangeTeamname{
-  font-family: Zona Pro;
   font-weight: 1000;
   color: white;
   text-transform: uppercase;
