--- a/CS2/teams.css
+++ b/CS2/teams.css
@@ -12,8 +12,12 @@
 
 *{
   /* box-sizing: border-box; */
-  font-family: 'Zona Pro Countdown';
+  font-family: 'Sora Uni Countdown';
   /* outline: solid 2px coral; */
+}
+
+:root{
+  --stats-row-gap: 70px;
 }
 
 /* Animationen */
@@ -36,6 +40,7 @@
   top: 42px;
   left: 50%;
   transform: translate(-50%);
+  z-index:0;
 }
 
 .TeamLogoContainer img{
@@ -52,6 +57,26 @@
   left:-7px;
 }
 
+#team1spieler1bild{
+  z-index:1;
+}
+
+#team1spieler2bild{
+  z-index:2;
+}
+
+#team1spieler3bild{
+  z-index:3;
+}
+
+#team1spieler4bild{
+  z-index:4;
+}
+
+#team1spieler5bild{
+  z-index:5;
+}
+
 .SpielerBilderLeftGrid img{
   max-height:340px;
 }
@@ -62,6 +87,26 @@
   position:absolute;
   top:125px;
   right:96px;
+}
+
+#team2spieler1bild{
+  z-index:5;
+}
+
+#team2spieler2bild{
+  z-index:4;
+}
+
+#team2spieler3bild{
+  z-index:3;
+}
+
+#team2spieler4bild{
+  z-index:2;
+}
+
+#team2spieler5bild{
+  z-index:1;
 }
 
 .SpielerBilderRightGrid img{
@@ -122,10 +167,29 @@
 
 /* Stats */
 
+.SpielerStatsTitleGrid{
+  display:grid;
+  grid-column-gap:25px;
+  grid-row-gap: var(--stats-row-gap);
+  grid-template: auto / auto;
+  color:white;
+  font-size:42px;
+  width: 120px;
+  position:absolute;
+  top: 591px;
+  left: 50%;
+  transform: translateX(-50%);
+  text-align:center;
+}
+
+.SpielerStatsTitleGrid span{
+  font-family: 'Sora Uni Black';
+}
+
 .SpielerStatsLeftGrid{
   display:grid;
   grid-column-gap:25px;
-  grid-row-gap: 83px;
+  grid-row-gap: var(--stats-row-gap);
   grid-template: auto / 150px 150px 150px 150px 150px;
   color:white;
   font-size:42px;
@@ -139,7 +203,7 @@
 .SpielerStatsRightGrid{
   display:grid;
   grid-column-gap:25px;
-  grid-row-gap: 83px;
+  grid-row-gap: var(--stats-row-gap);
   grid-template: auto / 150px 150px 150px 150px 150px;
   color:white;
   font-size:42px;
