--- a/RL/SpielerStats.css
+++ b/RL/SpielerStats.css
@@ -97,6 +97,7 @@
 }
 
 #SpielerStatsrPNG{
+  z-index:1;
   position:absolute;
   left:0px;
   top:0px;
@@ -105,6 +106,7 @@
 }
 
 #SpielerStatslPNG{
+  z-index:1;
   position:absolute;
   left:0px;
   top:0px;
