--- a/CS2/TeamStats.css
+++ b/CS2/TeamStats.css
@@ -1,15 +1,3 @@
-@keyframes fadeInLeft{
-  0% {opacity:0}
-  70% {opacity:0; transform: translateX(-50px)}
-  100% {opacity:1; transform: translateX(0)}
-}
-
-@keyframes fadeInRight{
-  0% {opacity:0}
-  70% {opacity:0; transform: translateX(50px)}
-  100% {opacity:1; transform: translateX(0)}
-}
-
 *{
   /* box-sizing: border-box; */
   font-family: 'Sora Uni Countdown';
@@ -20,14 +8,12 @@
   --stats-row-gap: 70px;
 }
 
-/* Animationen */
-
-.AnimLeft{
-  animation: fadeInLeft 3s ease-in-out;
-}
-
-.AnimRight{
-  animation: fadeInRight 3s ease-in-out;
+.imgfs{
+  position:absolute;
+  top:0px;
+  left:0px;
+  width:1920px;
+  height:1080px;
 }
 
 /* Team Logos oben */
@@ -48,6 +34,16 @@
 }
 
 /* Spielerbilder */
+
+#bar{
+  position:absolute;
+  top:460px;
+  left:0px;
+  background-color:white;
+  width:1920px;
+  height:5px;
+  z-index:10;
+}
 
 .SpielerBilderLeftGrid{
   display:grid;
@@ -113,7 +109,7 @@
   max-height:340px;
 }
 
-/* Spielernamen */
+/* Spielernamen und Maps*/
 
 .SpielerNamenLeftGrid{
   display:grid;
