--- a/CS2/TeamStats.css
+++ b/CS2/TeamStats.css
@@ -2,7 +2,7 @@
 
 *{
   /* box-sizing: border-box; */
-  font-family: 'Sora Uni Countdown';
+  font-family: 'Sora Uni';
   /* outline: solid 2px coral; */
 }
 
@@ -190,6 +190,7 @@
   grid-row-gap: var(--stats-row-gap);
   grid-template: auto / 150px 150px 150px 150px 150px;
   color:white;
+  font-family: 'Sora Uni Countdown';
   font-size:42px;
   width: 850px;
   position:absolute;
@@ -204,6 +205,7 @@
   grid-row-gap: var(--stats-row-gap);
   grid-template: auto / 150px 150px 150px 150px 150px;
   color:white;
+  font-family: 'Sora Uni Countdown';
   font-size:42px;
   width: 850px;
   position:absolute;
