--- a/CS2/TeamStats.css
+++ b/CS2/TeamStats.css
@@ -117,7 +117,7 @@
   display:grid;
   grid-column-gap:25px;
   grid-row-gap: 4px;
-  grid-template: auto / 150px 150px 150px 150px 150px;
+  grid-template: auto / repeat(5,150px);
   color:white;
   width: 850px;
   position:absolute;
@@ -137,7 +137,7 @@
   display:grid;
   grid-column-gap:25px;
   grid-row-gap: 4px;
-  grid-template: auto / 150px 150px 150px 150px 150px;
+  grid-template: auto / repeat(5,150px);
   color:white;
   width: 850px;
   position:absolute;
@@ -181,14 +181,14 @@
 }
 
 .SpielerStatsTitleGrid span{
-  font-family: 'Sora Uni Black';
+  font-weight:900;
 }
 
 .SpielerStatsLeftGrid{
   display:grid;
   grid-column-gap:25px;
   grid-row-gap: var(--stats-row-gap);
-  grid-template: auto / 150px 150px 150px 150px 150px;
+  grid-template: auto / repeat(5,150px);
   color:white;
   font-family: 'Sora Uni Countdown';
   font-size:42px;
@@ -203,7 +203,7 @@
   display:grid;
   grid-column-gap:25px;
   grid-row-gap: var(--stats-row-gap);
-  grid-template: auto / 150px 150px 150px 150px 150px;
+  grid-template: auto / repeat(5,150px);
   color:white;
   font-family: 'Sora Uni Countdown';
   font-size:42px;
